--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(swarm_control)
+project(dynamic_path_planning)
 
 # Default to C++14
 if(NOT CMAKE_CXX_STANDARD)
