--- a/package.xml
+++ b/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd"
             schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>swarm_control</name>
+  <name>dynamic_path_planning</name>
   <version>2.2.6</version>
   <description>
     Multi robot support TurtleBot3 in Gazebo
